# gitlab-search-bot

./: .gitignore  README.md  package-lock.json  pyproject.toml  tailwind.config.js
deployment/: deploy.sh  gitlab-search-bot-nginx.conf  gitlab-search-bot-supervisor.conf  gunicorn_start  init.sh  utils.sh
gitlab_search_bot/: .env-example  config.py
gitlab_search_bot/app/: main.py  utils.py
gitlab_search_bot/app/assets/: style.css
gitlab_search_bot/app/static/: style.css
gitlab_search_bot/app/templates/: _response.html  index.html
gitlab_search_bot/notebooks/: config.py  indexer.ipynb  parser.ipynb  processor.ipynb  vectorizer.ipynb
